libcurl assan ubuntu 20.04 workaround only for leak sanitizer

--- a/ThirdPartyComponents/curl/Makefile
+++ b/ThirdPartyComponents/curl/Makefile
@@ -36,9 +36,9 @@ SLINKDIRNAME=$(BASENAME)
 #
 # only saw failed configure with sanitize-leak on ubuntu 20.04, but easier to remove from all like we do for openssl --LGP 2023-09-01
 #
-CFLAGS:=$(filter-out -fsanitize=%, $(CFLAGS))
-CXXFLAGS:=$(filter-out -fsanitize=%, $(CXXFLAGS))
-LDFLAGS:=$(filter-out -fsanitize=%, $(LDFLAGS))
+CFLAGS:=$(filter-out -fsanitize=leak, $(CFLAGS))
+CXXFLAGS:=$(filter-out -fsanitize=leak, $(CXXFLAGS))
+LDFLAGS:=$(filter-out -fsanitize=leak, $(LDFLAGS))
 
 
 #
