--- a/.github/workflows/build-N-test.yml
+++ b/.github/workflows/build-N-test.yml
@@ -66,12 +66,13 @@ jobs:
     runs-on: ${{ matrix.runs_on }}
     strategy:
       matrix: ${{fromJson(needs.LinuxMatrixPrep.outputs.matrix)}}
-
     env:
       # vm has 2 virtual CPUs, but 8GB ram, so jobs=3 (empirical), and QUICK_BUILD avoids some internal testing
       MAKEFLAGS: "--jobs=3 QUICK_BUILD=1"
     container: ${{ matrix.container_image }}
     steps:
+      # NOTE - alot of these steps needlessly complicated by needing to do lots of cleans between steps
+      # to reduce space usage, since often runs out of space
       - uses: actions/checkout@v3
       - name: Build System Info
         run: |
@@ -82,11 +83,6 @@ jobs:
           grep processor /proc/cpuinfo | wc -l
           grep MemTotal /proc/meminfo
           df -h
-      - name: Save space
-        run: |
-          df -h
-          rm -rf .git
-          df -h
       - name: Configure ${{ matrix.config_name }}
         run: |
           ./configure ${{ matrix.config_name }} --compiler-driver ${{ matrix.compiler }} ${{ matrix.extra_config_args }} --cppstd-version ${{ matrix.cpp_version }}
@@ -96,22 +92,24 @@ jobs:
       ### DFS TMPHACK TO TEST
       - name: Make third-party-components
         run: |
-          df -h
           make third-party-components
-          df -h
           make clean
-          df -h
       - name: Make libraries
-        run: make libraries
-      # DISABLED DUE TO SPACE ISSUES
-      # - name: Make all
-      #   run: make all
+        run: |
+          make libraries
+          make clean
       - name: Run Tests
         run: |
+          df -h
+          du -hs Builds/* IntermediateFiles/*
           make run-tests
+          df -h
+          du -hs Builds/* IntermediateFiles/*
       - name: Save space
         run: |
           make --directory Tests clobber
+          df -h
+          du -hs Builds/* IntermediateFiles/*
       - name: Make tools & samples
         run: |
           make tools samples
